bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a*b <= 0) {
  ^